fromenv/tests/ui/06-empty-env-attribute.stderr
error: expected attribute arguments in parentheses: `env(...)`
 --> tests/ui/06-empty-env-attribute.rs:5:7
  |
5 |     #[env]
  |       ^^^
