fromenv/tests/ui/06-empty-env-attribute.rs
use fromenv::FromEnv;

#[derive(FromEnv)]
pub struct Config {
    #[env]
    foo: String,
}

fn main() {}
